# ClusterDuck

./: README.md  pyproject.toml  run.sh  run.slurm  test_header.sh  test_job.sh  test_script.py
clusterduck.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
clusterduck/core/: path_schema.py  settings.py  sweep.py
clusterduck/jobs/: jobs.py
clusterduck/slurm/: slurm_write.py  test_header.sh
clusterduck/utils/: radix_helper.py
src/: job_aggregator.py  jobs.py  output_strct.py  set_paths.py  settings.py  slurm_gen.py  sweep.py  var_t.py
src/config/: all_jobs.json
